# root

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/bitmaps/: farmer.aseprite  grass.aseprite  house.aseprite  tree.aseprite
lic/: palettes.txt
src/: CMakeLists.txt
src/root/: CMakeLists.txt  assert.hpp  assets.hpp  camera.cpp  camera.hpp  config.hpp  entity-system.hpp  events.hpp  exceptions.hpp  frame_timer.cpp  frame_timer.hpp  geometry.hpp  main.cpp  player-controller.hpp  player-terminal.cpp  player-terminal.hpp  resources.cpp  resources.hpp  screen-units.hpp  sprite.cpp  sprite.hpp  tasks.hpp  timers.cpp  type_traits.hpp  units.hpp  util.cpp  util.hpp  world-components.hpp  world-config.hpp  world-units.hpp  world.cpp  world.hpp
src/root-lib/: CMakeLists.txt  entity-system.cpp  events.cpp  events.hpp  events.proto  geometry.hpp  log.hpp  root.proto  timers.hpp  units.hpp  world.cpp
src/root-server/: CMakeLists.txt  main.cpp
